--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@mapbox/polyline": "^1.2.1",
     "axios": "^1.13.2",
     "ol": "^10.7.0",
     "vue": "^3.5.22"
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@dataport/eslint-config-geodev": "^1.0.0-alpha.1",
     "@tsconfig/node22": "^22.0.2",
+    "@types/mapbox__polyline": "^1.0.5",
     "@types/node": "^22.18.11",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/eslint-config-prettier": "^10.2.0",
